--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,16 @@
 {
     "require": {
-        "doctrine/orm": "^2.16",
-        "doctrine/dbal": "^3.7",
-        "doctrine/annotations": "^2.0",
+        "symfony/http-foundation": "^6.0",
+        "symfony/routing": "^6.0",
+        "doctrine/orm": "^2.11",
         "twig/twig": "^3.0",
-        "symfony/cache-contracts": "^3.0",
-        "symfony/cache": "^7.2"
+        "symfony/cache": "^7.2",
+        "symfony/asset": "^7.2",
+        "symfony/twig-bridge": "^7.2"
     },
     "autoload": {
         "psr-4": {
-            "Entity\\": "src/Entity/"
+            "App\\": "src/"
         }
     }
 }
