Implementación del controlador LibraryController.php para la librería de canciones guardadas.

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,7 @@ controllers:
 home:
     path: /
     controller: App\Controller\SongController::index
+
+library:
+    path: /library
+    controller: App\Controller\LibraryController::index
